app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  namespace: spring
  annotations:
    certmanager.k8s.io/issuer: "letsencrypt-cluster-issuer"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - controlplane.hanyeaktong.site
    secretName: tls-cert
  rules:
  - host: controlplane.hanyeaktong.site
    http:
      paths:
      - pathType: Prefix
        path: /spring/*
        backend:
          service:
            name: spring-service
            port:
              number: 8080
